refactoring to remove old deprecated usage of imageServer property